--- a/Seagrove website.html
+++ b/Seagrove website.html
@@ -7,7 +7,7 @@
     <h1>Hello World!</h1>
 
     <p>This is the landing page of <strong>seagrove.dev</strong>.</p>
-    <img src="./Seagrove website_files/us_small.jpg" alt="Selfie of Ingrid and Leif">
+    <img src="us_small.jpg" alt="Selfie of Ingrid and Leif">
   
 
 </body></html>
