--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-<!-- saved from url=(0021)https://seagrove.dev/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Seagrove website</title>
   </head>
@@ -10,4 +8,5 @@
     <img src="us_small.jpg" alt="Selfie of Ingrid and Leif">
   
 
-</body></html>
+</body>
+</html>
